# ChangeLog for x11-misc/gxneur
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Oct 2009; Peter Volkov <pva@gentoo.org>
  -files/gxneur-0.9.3-CFLAGS.patch, -gxneur-0.9.5.ebuild,
  +gxneur-0.9.7.ebuild:
  Version bump. Patch finally went upstream.

  26 Aug 2009; Peter Volkov <pva@gentoo.org>
  files/gxneur-0.9.3-CFLAGS.patch, -gxneur-0.9.4.ebuild,
  +gxneur-0.9.5.ebuild:
  Version bump.

  01 Jun 2009; Peter Volkov <pva@gentoo.org> -gxneur-0.9.3.ebuild,
  +gxneur-0.9.4.ebuild:
  Version bump.

  06 Apr 2009; Peter Volkov <pva@gentoo.org> gxneur-0.9.3.ebuild:
  Make eutils/versionator eclass globally inherited, thank Tommy for catching
  this.

  03 Apr 2009; Peter Volkov <pva@gentoo.org> +gxneur-0.9.3.ebuild,
  +files/gxneur-0.9.3-CFLAGS.patch, +metadata.xml:
  New Ebuild for bug 169494.
