@@ -1,4 +1,4 @@
-DIST gxneur-0.9.7.tar.bz2 346336 RMD160 7002b519cb70bd9367b057abfa457d740dc2a3fa SHA1 95e907cbf815dda21b367add88b77a08531a95b8 SHA256 c621eaa576c187448313be72aa4b5a3227565d868d218d4032303f0ce5a19024
-EBUILD gxneur-0.9.7.ebuild 951 RMD160 fc95dd2cf75960c43deef49b4bf025c6bd0854ac SHA1 09b7fc6ad179551b31fe2e82d7dc2343ef87e4cd SHA256 1e39cd128c5361cc66313f11e9ad5c04e561710b9fbcb142fa2ef2ca7af8217b
-MISC ChangeLog 841 RMD160 3e2968444040929c266577a372bcb2bf8be18d12 SHA1 a5039ac4be8d3b62cc362a414a403dc82784816d SHA256 074d610d9ddf3167d4035e75b997c59cbb05a905087efbc8802c11d840d35c1b
+DIST gxneur-0.9.9.tar.bz2 380171 RMD160 c1061d0ac0e95715e03567246169dc42a6ac0bd3 SHA1 eb1586e5b5b75a4c16af42240b45e784b96c477f SHA256 f0c28ef32c979a87e6bc418865cd92b3ca4c960491dd39711cec1dccefdd0685
+EBUILD gxneur-0.9.9.ebuild 955 RMD160 3bf5e7d59222681e0664b1e92c868a5344fafe67 SHA1 efc8c88668afb4324eaaaf1a996c7717fc66be34 SHA256 cd84dbaccb8784d1ba4e8722e6597d513e84e496536a7681598e11c4c073639c
+MISC ChangeLog 996 RMD160 dc5cda907774a960416549e1a277c8e2f7d06e02 SHA1 4981f71c2f998b6e0052f509e733b4a3bd6ebc69 SHA256 aea0b7da7ef14214c18017f943ba6e701b20289585a0c7dbd5432b2a61d1421d
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
